<resources>
    <string name="app_name">aprenderApp</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="sign_login">sign in</string>
    <string name="edithint_email">insert your Email</string>
    <string name="edithint_pass">insert your Password</string>
    //Alerts dialog
    <string name="alert_pass">Password Error</string>
    <string name="pass_error">insert your password</string>
    <string name="alert_email">type error</string>
    <string name="email_error">Email or password error</string>
    <string name="alert_log">welcome</string>
    <string name="message_log">Email and password are right</string>
    <string name="positiveBtn">Get in</string>
    //item
    <string name="item_close">log out</string>
    <string name="item_car">Shopping car</string>
    <string name="item_search">Search</string>
    //productos
    <string name="milan_suit">Milan Suit</string>
    <string name="paris_dress">Parisian Dress</string>
    <string name="eli_pants">Eli Pants</string>
    <string name="description_prod">lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla cuam velit, vulpulate eu paretra nec, mattis ac neque.</string>
</resources>